--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -1,3 +1,13 @@
-<p>
-  note works!
-</p>
+<div class="note-wrapper">
+  <div class="note-container">
+
+    <mat-form-field>
+      <textarea matInput placeholder="Title"></textarea>
+    </mat-form-field>
+
+    <mat-form-field>
+      <textarea matInput placeholder="Text" rows="10"></textarea>
+    </mat-form-field>
+
+  </div>
+</div>
