add note service implantation

--- a/src/app/note-card/note-card.component.html
+++ b/src/app/note-card/note-card.component.html
@@ -17,10 +17,10 @@
         <i class="material-icons note-icon">unarchive</i>
       </button>
       <button mat-mini-fab color="primary" *ngIf="!note.isDone">
-        <i class="material-icons note-icon" alt="Mark as done" aria-label="Mark as done">check_box</i>
+        <i class="material-icons note-icon" alt="not done" aria-label="not done">check_box_outline_blank</i>
       </button>
       <button mat-mini-fab color="primary" *ngIf="note.isDone">
-        <i class="material-icons note-icon" alt="Mark as undone" aria-label="Mark as undone">check_box_outline_blank</i>
+        <i class="material-icons note-icon" alt="done" aria-label="done">check_box</i>
       </button>
     </div>
   </div>
