--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -1,14 +1,14 @@
 <div class="content-wrapper">
 
   <h2 class="notes-title">Need to complete:</h2>
-
   <ul class="notes-wrapper">
-    <app-note-card *ngFor="let note of notes" [note]="note"></app-note-card>
+    <app-note-card *ngFor="let note of uncompletedNotes" [note]="note"></app-note-card>
   </ul>
 
   <h2 class="notes-title">Completed:</h2>
-
-  <div class="notes-wrapper"></div>
+  <ul class="notes-wrapper">
+    <app-note-card *ngFor="let note of completedNotes" [note]="note"></app-note-card>
+  </ul>
 
 </div>
 
