--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <h1 class="header-title">Fast Notes</h1> 
+  <h1 class="header-title">Fast Notes</h1>
 </header>
 
 <main class="main">
@@ -7,6 +7,7 @@
       <nav class="nav">
         <a class="nav-item" routerLink="/notes" routerLinkActive="active">Notes</a>
         <a class="nav-item" routerLink="/archive" routerLinkActive="active">Archive</a>
+        <a class="nav-item" routerLink="/newnote" routerLinkActive="active">New Note</a>
       </nav>
   </div>
   <router-outlet></router-outlet>
