--- a/src/app/note/note.component.scss
+++ b/src/app/note/note.component.scss
@@ -2,7 +2,7 @@
   &-container {
     display: flex;
     flex-direction: column;
-    width: 600px;
+    width: 500px;
     box-sizing: border-box;
     border-radius: 5px;
     box-shadow: 0 4px 16px rgba(0,0,0,.2);
@@ -14,6 +14,21 @@
     display: flex;
     justify-content: center;
     align-content: center;
-    width: calc(100vw - 200px);
+    width: calc(100vw - 250px);
   }
+
+  &-buttons {
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    padding: 16px;
+  }
+
+  &-icon {
+    cursor: pointer;
+  }
+}
+
+.close {
+  align-self: flex-end;
 }
