--- a/src/app/note-card/note-card.component.scss
+++ b/src/app/note-card/note-card.component.scss
@@ -23,11 +23,18 @@
   &-title {
     margin: 0;
     padding: 16px 16px 0;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
   }
 
   &-text {
     margin: 0;
     padding: 16px 16px 0;
+    height: 170px;
+    list-style: none;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 
   &-buttons {
