--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -1,32 +1,32 @@
 <div class="note-wrapper">
-  <div class="note-container">
-    <button mat-button class="close">X</button>
+  <div class="note-container" *ngIf="note">
+    <button mat-button class="close" (click)="save()">X</button>
 
     <mat-form-field>
-      <textarea matInput placeholder="Title"></textarea>
+      <textarea matInput placeholder="Title" [(ngModel)]="note.title"></textarea>
     </mat-form-field>
 
     <mat-form-field>
-      <textarea matInput placeholder="Text" rows="10"></textarea>
+      <textarea matInput placeholder="Text" [(ngModel)]="note.text" rows="10"></textarea>
     </mat-form-field>
 
     <div class="note-buttons">
       <div class="note-buttons--delete">
-        <button mat-mini-fab color="warn">
+        <button mat-mini-fab color="warn" (click)="deleteNote()">
           <i class="material-icons note-icon">delete</i>
         </button>
       </div>
       <div class="note-buttons--group">
-        <button mat-mini-fab *ngIf="!note.isArchive">
+        <button mat-mini-fab *ngIf="!note.isArchive" (click)="archiveNote()">
           <i class="material-icons note-icon">archive</i>
         </button>
-        <button mat-mini-fab *ngIf="note.isArchive">
+        <button mat-mini-fab *ngIf="note.isArchive" (click)="unarchiveNote()">
           <i class="material-icons note-icon">unarchive</i>
         </button>
-        <button mat-mini-fab color="primary" *ngIf="!note.isDone">
+        <button mat-mini-fab color="primary" *ngIf="!note.isDone" (click)="doneNote()">
           <i class="material-icons note-icon" alt="not done" aria-label="not done">check_box_outline_blank</i>
         </button>
-        <button mat-mini-fab color="primary" *ngIf="note.isDone">
+        <button mat-mini-fab color="primary" *ngIf="note.isDone" (click)="undoneNote()">
           <i class="material-icons note-icon" alt="done" aria-label="done">check_box</i>
         </button>
       </div>
