--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -5,12 +5,20 @@
   <div *ngIf="!showSearchResults">
     <h2 class="notes-title">Need to complete:</h2>
     <ul class="notes-wrapper">
-      <app-note-card *ngFor="let note of uncompletedNotes$ | async" [note]="note"></app-note-card>
+      <app-note-card
+        *ngFor="let note of uncompletedNotes$ | async"
+        [note]="note"
+        (updateNotes)="getNotes($event)"
+      ></app-note-card>
     </ul>
 
     <h2 class="notes-title">Completed:</h2>
     <ul class="notes-wrapper">
-      <app-note-card *ngFor="let note of completedNotes$ | async" [note]="note"></app-note-card>
+      <app-note-card
+      *ngFor="let note of completedNotes$ | async"
+      [note]="note"
+      (updateNotes)="getNotes($event)"
+    ></app-note-card>
     </ul>
   </div>
 
